[project]
name = "agent-intern"
version = "0.14.1"
description = "MCP server bridging the Antigravity (agy) and OpenAI Codex CLIs so Claude Code can drive them as sub-agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sinan Tüfekçi" }]
keywords = ["mcp", "claude", "claude-code", "antigravity", "gemini", "agy", "llm", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
]
dependencies = [
    "fastmcp>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[project.scripts]
agent-intern = "server:main"

[project.urls]
Homepage = "https://github.com/SinanTufekci/agent-intern"
Repository = "https://github.com/SinanTufekci/agent-intern"
Issues = "https://github.com/SinanTufekci/agent-intern/issues"
Sponsor = "https://github.com/sponsors/SinanTufekci"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# Flat layout: the distributable is the server module plus its swarm + codex
# helpers. Without this, setuptools auto-discovery aborts because the repo root
# also holds test_*.py.
[tool.setuptools]
py-modules = ["server", "swarm", "swarm_watch", "codex_bridge"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]

[tool.ruff.lint.per-file-ignores]
# swarm_watch.py is mostly one embedded HTML/CSS/JS page; its long style/script
# lines are an asset, not code to hard-wrap.
"swarm_watch.py" = ["E501"]
